--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -4,3 +4,13 @@
     height: 100%;
     background: #131316;
 }
+.wrap{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 1100px;
+    background: #eee;
+    margin: 10px auto;
+    position: relative;
+    text-align:center;
+}
