--- a/src/components/main/constructor/burger-constructor.module.css
+++ b/src/components/main/constructor/burger-constructor.module.css
@@ -1,9 +1,7 @@
 .container {
-    position: absolute;
+
     width: 600px;
-    height: 912px;
-    left: 900px;
-    top: 128px;
+    height:500px;
 }
 
 .burgerComponents {
@@ -14,12 +12,12 @@
     justify-content: center;
     padding: 0px;
     gap: 16px;
-    position: absolute;
     width: 570px;
     height: 656px;
     left: 16px;
-    top: 100px;
+    margin-top: 107px;
     overflow-x: hidden;
+    margin-left: 79px;
 }
 
 
@@ -30,8 +28,8 @@
     align-items: center;
     padding: 0px;
     gap: 40px;
-    position: absolute;
-    width: 568px;
+    margin-top: 50px;
+    width: 554px;
     height: 64px;
     left: 16px;
     top: 796px;
@@ -59,6 +57,15 @@
     height: 80px;
     border-radius: 20%;
     margin-top: 10px;
+}
+.ingridientBun {
+    display: flex;
+    flex-direction: row;
+    width: 568px;
+    height: 80px;
+    border-radius: 20%;
+    margin-top: 10px;
+    padding-left: 24px;
 }
 .in_hover {
     background-color: red;
