--- a/src/components/Header/app-header.module.css
+++ b/src/components/Header/app-header.module.css
@@ -1,102 +1,27 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-.navbar {
-    box-sizing: border-box;
-    position: absolute;
-    height: 88px;
-    align-items: center;
+.header {
     width: 100%;
     background: var(--background);
-    top: 40px;
-    background: #1c1c21;
-    box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
-    0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
-    0px 0px 1px rgba(0, 0, 0, 0.04);
 }
 
-.content {
-    position: absolute;
+.header-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     width: 1280px;
-    height: 56px;
-    left: calc(50% - 1280px / 2);
-    top: calc(50% - 56px / 2);
-}
-.dblbl {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 8px;
-    position: absolute;
-    width: 383px;
-    height: 56px;
-    left: 0px;
-    top: calc(50% - 56px / 2);
-    background: #1c1c21;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 16px 0;
 }
 
-.logo {
-    position: absolute;
-    width: 289.15px;
-    height: 40px;
-    left: 495px;
-    top: 8px;
-    background: #1c1c21;
-}
-.nav1 {
-    box-sizing: border-box;
+.item-left {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 16px 20px;
-    gap: 8px;
-    width: 197px;
-    height: 56px;
-    background: #1c1c21;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-}
-.nav2 {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 16px 20px;
-    gap: 8px;
-    width: 197px;
-    height: 56px;
-    background: #1c1c21;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+    margin-right: auto;
 }
 
-.account {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 16px 20px;
-    gap: 8px;
-    position: absolute;
-    width: 207px;
-    height: 56px;
-    left: 1073px;
-    top: 0px;
-    background: #1c1c21;
-    border-radius: 40px;
+.header-logo {
+    margin: 0 auto;
 }
 
-.accountName {
-    width: 135px;
-    height: 24px;
-    background: #1c1c21;
-    /* border: 1px dashed #4c4cff; */
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+.item-right {
+    margin-left: auto;
 }
