--- a/src/pages/profile.module.css
+++ b/src/pages/profile.module.css
@@ -27,7 +27,8 @@
 }
 .child1{
     width: 400px;
-
+    display: flex;
+    flex-direction: column;
 }
 .child2{
     width: 300px;
@@ -90,7 +91,7 @@ center {
 .back {
     display: flex;
     flex-direction: row;
-
+    cursor: pointer;
     align-items: center;
 
     width: 74px;
@@ -100,4 +101,8 @@ center {
     flex: none;
     order: 0;
     flex-grow: 0;
+}
+.divsave{
+    margin-top: 20px!important;
+    padding:0px!important;
 }
